<resources>
    <string name="app_name">Meditation App</string>
    <string name="are_you_sure">Are you Sure You \n want to Quit now?</string>
    <string name="having_trouble">Having Trouble ? Check Out our \n Help Center</string>
    <string name="no">No</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_completed">You Completed:</string>
    <string name="rate_this_session">Rate This Session</string>
    <string name="got_feedback">Got Feedback? \n We love to hear.</string>
    <string name="promo_code">Promo code</string>
    <string name="yes">Yes</string>
    <string name="monthly_value">Monthly $7.99</string>
    <string name="yearly_value">Yearly $150</string>
    <string name="terms">Terms and Conditions</string>
    <string name="get_more">Get More Affirmations</string>
    <string name="get_songs">Get Song</string>
    <string name="get_full_access">Get Full Access to Premium Content By Subscribing</string>
    <string name="subscription_access">Unlock the Entire SelfPause Experience</string>
    <string name="signup_facebook">SIGN UP WITH FACEBOOK</string>
    <string name="signup_google">SIGN UP WITH GOOGLE</string>
    <string name="or">~ or ~</string>
    <string name="signup_email">SIGN UP WITH EMAIL</string>
    <string name="voice">Voice</string>
    <string name="select_a_voice">Select a voice you would like to hear</string>
    <string name="alice">Alice</string>
    <string name="tiffany">Tiffany</string>
    <string name="kevin">Kevin</string>
    <string name="when_is_the">When is the best time \n for you to meditate?</string>
    <string name="togglebutton">toggle</string>
    <string name="categories">Categories</string>
    <string name="choose_topics">Choose to pics that \n interest you</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="professional">Professional</string>
    <string name="stress">Stress</string>
    <string name="relationships">Relationships</string>
    <string name="athletic">Athletic</string>
    <string name="health">Health</string>
    <string name="title_activity_weight_loss_">WeightLoss_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="type_your_affirmation_here">Type your affirmation here...</string>
    <string name="my_affirmations">My Affirmations</string>
    <string name="press_and_hold">Press and Hold to Record</string>
    <string name="happy_at_work">I Am Happy at Work</string>
    <string name="happy_now">I Am Happy Now</string>
    <string name="happiness_is">Happiness Is a chol...</string>
    <string name="happiness_is_easy">Happines Is easy</string>
    <string name="affirmations_to_inspire">Affirmations to inspire and kickstart \n your weight loss</string>
    <string name="my_recordings">My Recordings</string>
    <string name="recomended">Recomended</string>
    <string name="focus">Focus</string>
    <string name="affirmations_for_strong">Affirmations for a strong and powerful mindset</string>
    <string name="affirmations_for_cleaity">Affirmations for clarity and focus, to steamroll all your deily tasks with ease</string>
    <string name="affirmations_to_rejub">Affirmations to rejuvinate and refresh your body and mind</string>
    <string name="abun">Abundance</string>
    <string name="affirmations_to_str">Affirmations to strengthen your gratitude and abundance</string>
    <string name="play_all">PLAY ALL</string>
    <string name="my_favorites">My Favorites</string>
    <string name="financial">Financial</string>
    <string name="search">Search...</string>
    <string name="affirmations_to_strengthen">Affirmations to strengthen and spark your relationships</string>
    <string name="affirmations_for_a">Affirmations for a happier day,life and work balance</string>
    <string name="creativity_affirmations">Creativity Affirmations</string>
    <string name="inspiration">Inspiration</string>
    <string name="soundscapes">Soundscapes</string>
    <string name="music">Music</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="support">Support</string>
    <string name="help_center">Help Center</string>
    <string name="account">Account</string>
    <string name="terms_con"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy">Privacy Policy</string>
    <string name="subscription">Subscription</string>
    <string name="account_settings">Account Settings</string>
    <string name="first_name">First Name</string>
    <string name="full_name">Full Name</string>
    <string name="joeden">Joeden</string>
    <string name="edit">EDIT</string>
    <string name="last_name">Last Name</string>
    <string name="schafer">Schafer</string>
    <string name="email_address">Email Address</string>
    <string name="email_value">jodenachafer@gmail.com</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change">CHANGE</string>
    <string name="connected">*********</string>
    <string name="kevin_smith">kevin Smith</string>
    <string name="nin_dday">19 DAYS</string>
    <string name="friends">FRIENDS</string>
    <string name="give_your">Give your friends 14 days \n of Selfpause premium for free!</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="save_changes">Save Changes</string>
    <string name="invite">Invites:</string>
    <string name="email_id">myfriend@gmail.com</string>
    <string name="upgrade">Upgrade to Premium</string>
    <string name="this_week">THIS WEEK\'S TOP PICK</string>
    <string name="my_interest">My Interests</string>
    <string name="my_stuff">My Stuff</string>
    <string name="create">Create an account to save your progress</string>
    <string name="forget_your_pass_txt">Forget your password?</string>
    <string name="forget_your_pass_txt1">Enter your email below to receive your\npassword reset instructions</string>
    <string name="send_pass">Send Password</string>
    <string name="close_send_pass"><u>close</u></string>
    <string name="email">Email</string>
    <string name="log_in">LOG IN</string>
    <string name="dont">Don\'t have an account? <u>Sign Up</u></string>
    <string name="forget_password"><u>Forget password?</u></string>
    <string name="login_google">LOG IN WITH GOOGLE</string>
    <string name="login_facebook">LOG IN WITH FACEBOOK</string>
    <string name="sign_up">SIGN UP</string>
    <string name="have_an">Have an account? <u>Log In</u></string>
    <string name="lorm">Lorem ipsum is a name for a common type of placeholder text. Also known as filler or dummy text,
        this is simply copy that serves to fill a space without actually saying anything meaningful. It’s essentially
        nonsense text, but gives an idea of what real text will look like in the final product.
    </string>
    <string name="data_filter">Data Filter</string>
    <string name="are_you_sure_notification_dalete">Are you sure you want to delete this hotel Affiliation</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="submit">SUBMIT</string>
    <string name="add_description">Add Description</string>
    <string name="logout">Logout</string>
    <string name="motivation_to_exercise">Motivation to Excercise</string>


    <string name="loading">Please wait...</string>

    <string name="facebook_app_id">606847760046829</string>
    <string name="fb_login_protocol_scheme">fb606847760046829</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
