<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/img_account_first_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:padding="@dimen/_15sdp"
            android:src="@mipmap/back_button"
            android:tint="@color/gray_eight" />

        <com.example.meditationapp.Custom_Widgets.CustomBoldtextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/gray_eight"
            android:textSize="@dimen/_20sdp">

        </com.example.meditationapp.Custom_Widgets.CustomBoldtextView>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:padding="@dimen/_15sdp" />
    </LinearLayout>

    <ScrollView

        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="vertical">

            <com.example.meditationapp.Custom_Widgets.CustomBoldtextView
                android:id="@+id/txt_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.8"
                android:gravity="center|left"
                android:text="@string/notifications"
                android:textColor="@color/gray_eight"
                android:textSize="@dimen/_15sdp" />

            <com.example.meditationapp.Custom_Widgets.CustomBoldtextView
                android:id="@+id/txt_support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:gravity="center|left"
                android:text="@string/support"
                android:textColor="@color/gray_eight"
                android:textSize="@dimen/_15sdp" />

            <com.example.meditationapp.Custom_Widgets.CustomBoldtextView
                android:id="@+id/txt_help_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:visibility="gone"
                android:gravity="center|left"
                android:text="@string/help_center"
                android:textColor="@color/gray_eight"
                android:textSize="@dimen/_15sdp" />

            <com.example.meditationapp.Custom_Widgets.CustomBoldtextView
                android:id="@+id/txt_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:gravity="center|left"
                android:text="@string/account"
                android:textColor="@color/gray_eight"
                android:textSize="@dimen/_15sdp" />

            <com.example.meditationapp.Custom_Widgets.CustomBoldtextView
                android:id="@+id/txt_terms_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:gravity="center|left"
                android:text="@string/terms_con"
                android:textColor="@color/gray_eight"
                android:textSize="@dimen/_15sdp" />

            <com.example.meditationapp.Custom_Widgets.CustomBoldtextView
                android:id="@+id/txt_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:gravity="center|left"
                android:text="@string/privacy"
                android:textColor="@color/gray_eight"
                android:textSize="@dimen/_15sdp" />

            <com.example.meditationapp.Custom_Widgets.CustomBoldtextView
                android:id="@+id/txt_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:gravity="center|left"
                android:text="@string/subscription"
                android:textColor="@color/gray_eight"
                android:textSize="@dimen/_15sdp" />

            <com.example.meditationapp.Custom_Widgets.CustomBoldtextView
                android:id="@+id/txt_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:gravity="center|left"
                android:text="@string/logout"
                android:textColor="@color/gray_eight"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>