<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/black_bg"
    android:orientation="vertical"
   >
    <LinearLayout
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_20sdp">

    <com.example.meditationapp.Custom_Widgets.CustomBoldtextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.45"
        android:gravity="center|bottom"
        android:text="@string/are_you_sure"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
    android:layout_marginBottom="@dimen/_15sdp"   />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.09"
        android:orientation="horizontal"
        android:weightSum="0.5"

        android:layout_gravity="center"
        android:gravity="center">

        <com.example.meditationapp.Custom_Widgets.CustomBoldtextView
            android:id="@+id/txt_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:background="@mipmap/curve_blue_shade"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp"/>
<LinearLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="0.02">

</LinearLayout>
        <com.example.meditationapp.Custom_Widgets.CustomBoldtextView
            android:id="@+id/txt_yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:background="@mipmap/curve_white_shade"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/sky_blue"
            android:textSize="@dimen/_17sdp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="0.35"
            android:orientation="horizontal"
            android:weightSum="1"></LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.09"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:src="@mipmap/red_ex"
            android:padding="@dimen/_6sdp"/>

        <com.example.meditationapp.Custom_Widgets.CustomBoldtextView
            android:id="@+id/txt_help_center_quit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/having_trouble"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
           >

        </com.example.meditationapp.Custom_Widgets.CustomBoldtextView>

    </LinearLayout>
    </LinearLayout>
</LinearLayout>