<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.meditationapp.javaActivities.ForgetPasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:src="@mipmap/logo" />

    <com.example.meditationapp.Custom_Widgets.CustomRegularTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/forget_your_pass_txt"
        android:textSize="@dimen/_20sdp" />

    <com.example.meditationapp.Custom_Widgets.CustomBoldtextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/forget_your_pass_txt1"
        android:textColor="@color/gray_cthree_"
        android:textSize="@dimen/_12sdp" />

    <ScrollView

        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="vertical">
            <!--#e3e3e3-->
            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:orientation="vertical"-->
            <!--                android:background="@drawable/shodow"-->
            <!--                android:layout_marginTop="@dimen/_60sdp">-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_1sdp"
                android:background="@mipmap/login_sign_up_bg"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:padding="@dimen/_15sdp"
                    android:src="@mipmap/email" />

                <com.example.meditationapp.Custom_Widgets.CustomBoldEditText
                    android:id="@+id/forget_pass_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.7"
                    android:background="@android:color/transparent"
                    android:gravity="center|left"
                    android:hint="@string/email"
                    android:inputType="textWebEmailAddress"
                    android:maxLines="1"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <com.example.meditationapp.Custom_Widgets.CustomRegularTextView
                android:id="@+id/send_forget_pass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:background="@mipmap/sign_up_email_bg"
                android:gravity="center"
                android:text="@string/send_pass"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <com.example.meditationapp.Custom_Widgets.CustomBoldtextView
                android:id="@+id/close_send_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/close_send_pass"
                android:textColor="@color/gray_cthree_"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
